# CPTs

./: .gitignore  README.md  pyproject.toml
paper/results/: results.tex  results_raw.csv
paper/results/1000it/binary_only/: results.tex  results_raw.csv
paper/results/1000it/discrete_only/: results.tex  results_raw.csv
paper/results/1000it/mixed/: results.tex  results_raw.csv
paper/results/real/: real_world_results old.tex  real_world_results.csv  real_world_results_10.1161_JAHA.118.011771.tex  real_world_results_10.1161_JAHA.118.011771_raw.csv  real_world_results_10.1186_s13104-019-4632-2.tex  real_world_results_10.1186_s13104-019-4632-2_raw.csv  real_world_results_10.1371_journal.pmed.1002785.tex  real_world_results_10.1371_journal.pmed.1002785_raw.csv  real_world_results_raw.csv
paper/sensitivity/: independence_0.0.csv  independence_0.25.csv  independence_0.5.csv  independence_0.75.csv  independence_1.0.csv  nodes_10.csv  nodes_12.csv  nodes_2.csv  nodes_4.csv  nodes_6.csv  nodes_8.csv  noise_0.0.csv  noise_0.1.csv  noise_0.25.csv  noise_0.5.csv  noise_1.0.csv  nq_100.csv  nq_1000.csv  nq_2000.csv  nq_250.csv  nq_500.csv
src/: plot_sensitivity.py  plot_synthetic.py  run_llm_baseline.py  run_real_world.py  run_sensitivity.py  run_synthetic.py
src/approaches/: constraint_optimization.py  copula_optimization.py  ipf.py  mcmc.py  synthetic_em.py
src/extractor/: extractor.py  json_report.json  models.py  old.json
src/utils/: baselines.py  converter.py  eval.py  eval_sensitivity.py  llm_baseline.py  patches.py  real_world_manager.py
(+56 files in other folders)
